syntax = "proto3";
package recycle;

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  string error = 3;
}

message ProfileRequest {
  string user_id = 1;
}

message ProfileResponse {
  string id = 1;
  string full_name = 2;
  string role = 3; // admin, driver, user
}

message TransactionRequest {
  string user_id = 1;
  string waste_type_id = 2;
  float weight = 3;
}

message TransactionResponse {
  string status = 1;
  string message = 2;
  float total_price = 3;
}

message WasteType {
  string id = 1;
  string name = 2;
  float price_per_kg = 3;
}

message WasteTypeList {
  repeated WasteType items = 1;
}

message Empty {}